# agent-cash

./: .env.example  .gitignore  CHANGELOG.md  CHAT_REFERENCE.md  CLAUDE.md  DEPLOYMENT.md  DOCKER.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRD.txt  QUICKSTART.md  QUICKSTART_CHAT.md  README.md  README_CHAT.md  README_MCP.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  test-chat-services.sh
.claude/: settings.json
.claude/agents/: api-designer.md  api-documenter.md  build-engineer.md  cloud-architect.md  cpp-pro.md  database-administrator.md  debugger.md  dependency-manager.md  deployment-engineer.md  devops-engineer.md  devops-incident-responder.md  embedded-systems.md  frontend-developer.md  fullstack-developer.md  golang-pro.md  graphql-architect.md  incident-responder.md  kubernetes-specialist.md  mcp-developer.md  microservices-architect.md  mobile-developer.md  network-engineer.md  platform-engineer.md  python-pro.md  refactoring-specialist.md  rust-engineer.md  sql-pro.md  sre-engineer.md  terraform-engineer.md  ui-designer.md  (+2 more)
agents/: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
agents/agents/: finance_agent.py
agents/routes/: chat.py
agents/services/: agent_service.py  mcp_client.py
backend/: .dockerignore  CHANGES.md  Dockerfile  Dockerfile.mcp  README.md  go.mod  go.sum  todo.md
chainlit/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
docs/: MCP_SERVER.md  chat-architecture.md
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
(+84 files in other folders)
